k8s/environments/sbox/common-overlay/toffee/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-tls
  annotations:
    kubernetes.io/ingress.class: traefik
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
  - hosts:
    - sandbox.platform.hmcts.net
    secretName: ingress-tls-csi
  rules:
  - host: toffee.sandbox.platform.hmcts.net
    http:
      paths:
      - backend:
          service:
            name: traefik
            port:
              number: 9000
        path: /
